2008-06-13  Stefan Kost  <ensonic@users.sf.net>

	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-bad-plugins-docs.sgml:
	* docs/plugins/gst-plugins-bad-plugins-sections.txt:
	* docs/plugins/gst-plugins-bad-plugins.args:
	* docs/plugins/gst-plugins-bad-plugins.hierarchy:
	* docs/plugins/gst-plugins-bad-plugins.interfaces:
	* docs/plugins/gst-plugins-bad-plugins.prerequisites:
	* docs/plugins/gst-plugins-bad-plugins.signals:
	* docs/plugins/inspect/plugin-alsaspdif.xml:
	* docs/plugins/inspect/plugin-amrwb.xml:
	* docs/plugins/inspect/plugin-app.xml:
	* docs/plugins/inspect/plugin-bayer.xml:
	* docs/plugins/inspect/plugin-bz2.xml:
	* docs/plugins/inspect/plugin-cdaudio.xml:
	* docs/plugins/inspect/plugin-cdxaparse.xml:
	* docs/plugins/inspect/plugin-dtsdec.xml:
	* docs/plugins/inspect/plugin-dvb.xml:
	* docs/plugins/inspect/plugin-dvdspu.xml:
	* docs/plugins/inspect/plugin-faac.xml:
	* docs/plugins/inspect/plugin-faad.xml:
	* docs/plugins/inspect/plugin-fbdevsink.xml:
	* docs/plugins/inspect/plugin-festival.xml:
	* docs/plugins/inspect/plugin-filter.xml:
	* docs/plugins/inspect/plugin-flvdemux.xml:
	* docs/plugins/inspect/plugin-freeze.xml:
	* docs/plugins/inspect/plugin-gsm.xml:
	* docs/plugins/inspect/plugin-gstinterlace.xml:
	* docs/plugins/inspect/plugin-gstrtpmanager.xml:
	* docs/plugins/inspect/plugin-h264parse.xml:
	* docs/plugins/inspect/plugin-interleave.xml:
	* docs/plugins/inspect/plugin-jack.xml:
	* docs/plugins/inspect/plugin-ladspa.xml:
	* docs/plugins/inspect/plugin-metadata.xml:
	* docs/plugins/inspect/plugin-mms.xml:
	* docs/plugins/inspect/plugin-modplug.xml:
	* docs/plugins/inspect/plugin-mpeg2enc.xml:
	* docs/plugins/inspect/plugin-mpeg4videoparse.xml:
	* docs/plugins/inspect/plugin-mpegtsparse.xml:
	* docs/plugins/inspect/plugin-mpegvideoparse.xml:
	* docs/plugins/inspect/plugin-musepack.xml:
	* docs/plugins/inspect/plugin-musicbrainz.xml:
	* docs/plugins/inspect/plugin-mve.xml:
	* docs/plugins/inspect/plugin-mythtv.xml